Fixed bug #44607 (stream_get_line unable to correctly identify the "ending" in the stream content)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@268228 c90b9560-bf6c-de11-be94-00142212c4b1